[package]
name = "webscraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"

env_logger = "0.11.3"
html_parser = "0.7.0"
log = "0.4.22"
reqwest = { version = "0.11", features = ["json"]}
serde = "1.0.205"
serde_json = "1.0.122"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.2", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
scraper = "0.20.0"
bytestring = "1.3.1"
thirtyfour = "0.33.0"
hyper = { version = "1.4.1", features = ["full"] }
scc = "2.1.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
